--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>title</title>
+    <meta charset="UTF-8" />
+    <title>sharezza-social</title>
   </head>
   <body>
-  
+    <h1>Come and see sharezza-social</h1>
   </body>
 </html>
